force-app/main/default/objects/SyncUserSettings__mdt/SyncUserSettings__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type generated from CSV: C:\Users\aleksandr.novikov\CMDT_Tools\ScheduleCron.csv</description>
    <label>SyncUserSettings</label>
    <pluralLabel>SyncUserSettingss</pluralLabel>
</CustomObject>