force-app/main/default/objects/SyncUserSettings__mdt/fields/AllowNotifications__c.field-meta.xml
<CustomField>
    <fullName>AllowNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowNotifications</label>
    <type>Checkbox</type>
</CustomField>