force-app/main/default/objects/SyncUserSettings__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>IsEnabled__c</fullName>
    <label>IsEnabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>