force-app/main/default/objects/SyncUserSettings__mdt/fields/ScheduleCron__c.field-meta.xml
<CustomField>
    <fullName>ScheduleCron__c</fullName>
    <label>ScheduleCron</label>
    <length>255</length>
    <type>Text</type>
</CustomField>